--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,10 +1,5 @@
 // Color Scheme
-// First Color Scheme white
 $white: #FFF;
-$isabelline: #ececec;
-$lightgray: #D1D1D1;
-
-//black
-$smokyblack: #0c0910;
-$granite-gray: #646266;
-$quick-silver: #a6a5a8;
+$verde_Agua: #7cea9c;
+$negro_raro: #2d3047;
+$blackyy: #071013;
