--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9672,12 +9672,22 @@ body {
 h1, h2, h3 {
   font-family: "Lato", sans-serif;
   font-weight: 700;
+  font-size: 50px;
+  color: #2d3047;
+}
+
+h4 {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #2d3047;
 }
 
 p {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 16px;
+  color: #2d3047;
 }
 
 .navigation {
@@ -9724,6 +9734,36 @@ p {
     font-family: "Lato", sans-serif;
     font-weight: 700;
   }
+}
+.container {
+  margin-left: 20%;
+  height: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: baseline;
+  justify-content: space-between;
+  align-content: center;
+  background-color: #FFF;
+}
+
+.item {
+  box-sizing: border-box;
+  width: 90%;
+  border: 1px solid black;
+  background-color: #FFF;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: space-between;
+  align-content: center;
+  padding: 10%;
+}
+.item--awesome i {
+  color: #2d3047;
+}
+
+.item p {
+  margin-top: 5%;
 }
 
 /*# sourceMappingURL=main.css.map */
